--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,13 @@
     margin:0px 120px;
   }
 
+  @media (max-width: 1020px) {
+    .container {
+      padding:0px 10px; 
+      margin:0px 60px;
+      }
+  }
+
   @media (max-width: 668px) {
     .container {
         padding:0px 10px; 
